fix y axis label alignment on preview chart

--- a/src/css/organisms/map-legend.css
+++ b/src/css/organisms/map-legend.css
@@ -208,7 +208,7 @@ when it is just the preview chart
     transform: rotate(-90deg);
     height: 24px;
     display: flex;
-    width: 156px;
+    width: 196px;
     transform-origin: top left;
     top: auto;
     bottom: -24px;
